Fixed download dropdown align

--- a/css/nova.css
+++ b/css/nova.css
@@ -29,3 +29,7 @@ Author: Shadowfacts
 .nova-link {
 	color: #18BC9C !important;
 }
+
+.nova-dropdown-menu {
+	text-align: left;
+}
